Summary of important user-visible changes for bim 1.1.4:
-------------------------------------------------------------------

 ** Added new functions for cylindrical coordinates in axisymmetric 
    configuration.

 ** Fixed some bugs in 1d upwind discretization.

Summary of important user-visible changes for bim 1.1.3:
-------------------------------------------------------------------

 ** Added new projection functions.

 ** A function for the generation of 3D boundary matrices has been added that
    can be used in the implementation of Robin boundary condition and interface
    conditions.
 
 ** Added a set of functions for the computation of inf, L2 and H1 norms of 
    piecewise constant and elementwise constant functions.

Summary of important user-visible changes for bim 1.1.2:
-------------------------------------------------------------------

 ** Fixed a bug in 1d upwind discretization.

 ** Added function to compute gradient of a 3d scalar field.

Summary of important user-visible changes for bim 1.1.1:
-------------------------------------------------------------------

 ** Added new functions to perform interpolation at arbitrary nodes.

Summary of important user-visible changes for bim 1.1.0:
-------------------------------------------------------------------

 ** Added new functions implementing the Orthogonal Subdomain Collocation 
    method in 3D.

 ** More functions for 3d problems were added.

 ** Demostrations of how to use the package are now in the wiki.



