@@ -1,3 +1,9 @@
+Summary of important user-visible changes for bim 1.1.5:
+-------------------------------------------------------------------
+
+ ** Improvement of the functions for stiffness matrix assembly in 2D 
+    axisymmetric configuration.
+
 Summary of important user-visible changes for bim 1.1.4:
 -------------------------------------------------------------------
 
